; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_snd_dma.c_S_StopBackgroundTrack.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/client/extr_snd_dma.c_S_StopBackgroundTrack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@s_backgroundFile = common dso_local global i64 0, align 8
@s_rawend = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @S_StopBackgroundTrack() #0 {
  %1 = load i64, i64* @s_backgroundFile, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %4, label %3

3:                                                ; preds = %0
  br label %9

4:                                                ; preds = %0
  %5 = load i64, i64* @s_backgroundFile, align 8
  %6 = call i32 @Sys_EndStreamedFile(i64 %5)
  %7 = load i64, i64* @s_backgroundFile, align 8
  %8 = call i32 @FS_FCloseFile(i64 %7)
  store i64 0, i64* @s_backgroundFile, align 8
  store i64 0, i64* @s_rawend, align 8
  br label %9

9:                                                ; preds = %4, %3
  ret void
}

declare dso_local i32 @Sys_EndStreamedFile(i64) #1

declare dso_local i32 @FS_FCloseFile(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
